--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.profiles.active=@spring.profiles.active@
+server.port=8080
+spring.mvc.hiddenmethod.filter.enabled=true
+
+#users db
+spring.datasource.url=jdbc:mysql://localhost:3306/new_schema
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=root
 
