--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
-server.port=80
+server.port=8080
 spring.mvc.hiddenmethod.filter.enabled=true
-hostname=176.119.156.129
+hostname=localhost:8080
 
 #users db
 spring.datasource.url=jdbc:mysql://localhost:3306/new_schema
