--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,10 @@
 			<version>1.18.22</version>
 			<scope>provided</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>org.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-springsecurity5</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
